--- a/ChatBot.ipynb
+++ b/ChatBot.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/acidrefluxreflex/ChatAI-Japanese/blob/main/ChatBot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -88,13 +88,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_a2fKrlmMCB9"
+      },
       "source": [
         "## チャットボット\n",
         "会話をする部分はクラスとして実装した。文章生成と会話をそれぞれ行う２つの関数を持っている。"
-      ],
-      "metadata": {
-        "id": "_a2fKrlmMCB9"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -184,14 +184,14 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Y7j_zubfMi8R"
+      },
       "source": [
         "## 実際に会話してみる\n",
         "\n",
         "最初にAIの名前、趣味、基本的にはLINEやメッセージアプリのように返信をしていく。会話を終わらせたい時は入力なしでEnterを押せばよい。まるで既読無視だね。\n"
-      ],
-      "metadata": {
-        "id": "Y7j_zubfMi8R"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -217,6 +217,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Y5ti1q1fNOQ4"
+      },
       "source": [
         "## 改善点\n",
         "やはりAI側の初期設定が問題だろう。より軽量のモデルとファインチューニングを組み合わせれば名前や口調を自由に変えられる。会話が長引くと、読み取る文脈も長くなって処理に時間がかかる問題もある。\n",
@@ -228,29 +231,33 @@
         "\n",
         "[13億パラメータのGPT日本語学習済みモデルが出たので会話応答を生成してみた - Qiita](https://qiita.com/MamoruItoi/items/a18abfedb79a57aeb91c)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "Y5ti1q1fNOQ4"
-      }
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "name": "ChatBot.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
       "authorship_tag": "ABX9TyMkDAfmimCl/MYZaGwx2veL",
-      "include_colab_link": true
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "ChatBot.ipynb",
+      "provenance": []
     },
+    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.9 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.9"
     },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
