--- a/ChatBot.ipynb
+++ b/ChatBot.ipynb
@@ -83,7 +83,29 @@
       },
       "outputs": [],
       "source": [
-        "import torch"
+        "import torch\n",
+        "model = torch.quantization.quantize_dynamic(model, {torch.nn.Linear}, dtype=torch.qint8)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from torch import nn\n",
+        "import torch.nn.utils.prune as prune\n",
+        "\n",
+        "PRUNE_RATE = 0.2\n",
+        "\n",
+        "def prune_transform(model: nn.Module) -> nn.Module:\n",
+        "  for name, module in model.named_modules():\n",
+        "    if isinstance(module, torch.nn.Linear):\n",
+        "        prune.l1_unstructured(module, name='weight', amount=PRUNE_RATE)\n",
+        "        prune.remove(module, \"weight\")\n",
+        "  return model\n",
+        "\n",
+        "model = prune_transform(model)"
       ]
     },
     {
@@ -111,16 +133,17 @@
         "         \n",
         "\n",
         "   #文章生成を行う関数。元になる文章、最大文字数、最小文字数を引数にもつ。\n",
-        "   def generate(self, text, max_length, min_length):\n",
+        "   def generate(self, text, max_new_tokens, min_new_tokens):\n",
         "     token_ids = tokenizer.encode(text, add_special_tokens=False, return_tensors=\"pt\")\n",
         "     with torch.no_grad():\n",
         "        output_ids = model.generate(\n",
         "            token_ids.to(model.device),\n",
-        "            max_length=max_length,\n",
-        "            min_length=min_length,\n",
+        "            max_new_tokens=max_new_tokens,\n",
+        "            min_new_tokens=min_new_tokens,\n",
         "            do_sample=True,\n",
         "            top_k=500,\n",
         "            top_p=0.95,\n",
+        "            padding=\"do_not_pad\",\n",
         "            pad_token_id=tokenizer.pad_token_id,\n",
         "            bos_token_id=tokenizer.bos_token_id,\n",
         "            eos_token_id=tokenizer.eos_token_id,\n",
@@ -142,8 +165,8 @@
         "     print(\"AIに言いたい事を入力してください。終了したいときは未入力のままEnter\")\n",
         "     userInput = \"ッ\"\n",
         "     text = name_text + hobby_text + work_text + f\"以下は人間とあなたの会話です。人間:「こんにちは!」あなた:「はい、こんにちは」人間:「\"\n",
-        "     max_length = 70\n",
-        "     min_length = 40\n",
+        "     max_new_tokens = 25\n",
+        "     min_new_tokens = 20\n",
         "     \n",
         "\n",
         "     while userInput != \"\":\n",
@@ -152,11 +175,6 @@
         "           print(\"会話を終了します\")\n",
         "           break\n",
         "       text += userInput + f\"」あなた:「\"\n",
-        "\n",
-        "       #文字数調節\n",
-        "       message_gap = len(text) - max_length\n",
-        "       if message_gap > 40:\n",
-        "         max_length = len(text) - 30\n",
         "\n",
         "       output = self.generate(text,max_length,min_length)\n",
         "\n",
@@ -173,11 +191,7 @@
         "       outputSentence = \"\".join(outputList)\n",
         "       text += outputSentence + \"人間:「\"\n",
         "       message = outputSentence.replace(\"」\", \"\")\n",
-        "\n",
-        "       #文字数調節\n",
-        "       max_length = len(message) + 70\n",
-        "       min_length = len(message) + 40\n",
-        "      \n",
+        "       \n",
         "       print(message)\n",
         "      "
       ]
@@ -201,17 +215,7 @@
       },
       "outputs": [],
       "source": [
-        "bot = ChatBot()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cB91ePK4-O9-"
-      },
-      "outputs": [],
-      "source": [
+        "bot = ChatBot()\n",
         "bot.chat()"
       ]
     },
