speed up ChatBot.ipynb

--- a/ChatBot.ipynb
+++ b/ChatBot.ipynb
@@ -147,7 +147,9 @@
         "            pad_token_id=tokenizer.pad_token_id,\n",
         "            bos_token_id=tokenizer.bos_token_id,\n",
         "            eos_token_id=tokenizer.eos_token_id,\n",
-        "            bad_word_ids=[[tokenizer.unk_token_id]]\n",
+        "            bad_word_ids=[[tokenizer.unk_token_id],\n",
+        "                          [2070,    3],\n",
+        "                          [5378]]\n",
         "        )\n",
         "        output = tokenizer.decode(output_ids.tolist()[0])\n",
         "        return output\n",
@@ -156,15 +158,15 @@
         "   def chat(self):\n",
         "     #プロフィール設定\n",
         "     name = input(\"AIの名前:\")\n",
-        "     name_text = f\"あなたは{name}です。あなたの名前は{name}といいます。\"\n",
+        "     name_text = f\"あなたは{name}で、名前は{name}といいます。\"\n",
         "     hobby = input(\"AIの趣味:\")\n",
-        "     hobby_text = f\"あなたの趣味は{hobby}で、休日は{hobby}をして過ごしています。\"\n",
+        "     hobby_text = f\"趣味は{hobby}で、休日は{hobby}をして過ごしています。\"\n",
         "     work = input(\"AIの職業:\")\n",
-        "     work_text = f\"あなたの職業は{work}で、普段は{work}として生活しています。\"\n",
+        "     work_text = f\"職業は{work}で、普段は{work}として生活しています。\"\n",
         "\n",
         "     print(\"AIに言いたい事を入力してください。終了したいときは未入力のままEnter\")\n",
         "     userInput = \"ッ\"\n",
-        "     text = name_text + hobby_text + work_text + f\"以下は人間とあなたの会話です。人間:「こんにちは!」あなた:「はい、こんにちは」人間:「\"\n",
+        "     text = name_text + hobby_text + work_text + f\"以下は人間と{name}の会話です。人間:「こんにちは!」{name}:「はい、こんにちは」人間:「\"\n",
         "     max_new_tokens = 25\n",
         "     min_new_tokens = 20\n",
         "     \n",
@@ -175,8 +177,7 @@
         "           print(\"会話を終了します\")\n",
         "           break\n",
         "       text += userInput + f\"」あなた:「\"\n",
-        "\n",
-        "       output = self.generate(text,max_length,min_length)\n",
+        "       output = self.generate(text,max_new_tokens,min_new_tokens)\n",
         "\n",
         "       #半角正則化\n",
         "       text = text.translate(str.maketrans({chr(0xFF01 + i): chr(0x21 + i) for i in range(94)}))\n",
