--- a/RoyalLady.ipynb
+++ b/RoyalLady.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AIお嬢様\n",
+    "\n",
+    "## 概要\n",
+    "お嬢様口調で話すチャットボットと会話ができるプログラムです。言語モデルとしてrinna社のjapanese-gpt-1bを使用しています。\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
